--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -14,23 +14,19 @@
 </head>
 
     <body>
-    <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
+    <!-- Remove this line the first time you edit this file ---
    <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
               <a class="navbar-brand" href="{% url 'djangoapp:about' %}">Dealership Review</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-            {% if user.is_authenticated %}
             <li>
-                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                <a class="btn btn-link" href="#"></a>
                 <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
             </li>
-            {% else %}
             <li>
                 <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                    {% csrf_token %}
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Username" name="username" >
                         <input type="password" class="form-control" placeholder="Username" name="psw" >
@@ -39,7 +35,6 @@
                     </div>
                 </form>
             </li>
-            {% endif %}
         </ul>
     </div>
 </nav> 
@@ -56,14 +51,13 @@
                 </tr>
             </thead>
              <tbody>
-                {% for dealer in dealership_list %}
                     <tr>
-                        <td>{{dealer.id}}</td>
-                        <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}">{{dealer.full_name}}</a></td>   
-                        <td>{{dealer.city}}</td>
-                        <td>{{dealer.address}}</td>
-                        <td>{{dealer.zip}}</td>
-                        <td>{{dealer.st}}</td>
+                        <td></td>
+                        <td><a href="{% url 'djangoapp:dealer_details' dealer.id %}"></a></td>   
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     {% endfor %}
                 </tbody>
