--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -16,17 +16,21 @@
     <body>
     <!-- Remove this line the first time you edit this file ---
    <nav class="navbar navbar-light bg-light">
+   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
               <a class="navbar-brand" href="{% url 'djangoapp:about' %}">Dealership Review</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
             <li>
-                <a class="btn btn-link" href="#"></a>
+                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
                 <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
             </li>
+            {% else %}
             <li>
                 <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Username" name="username" >
                         <input type="password" class="form-control" placeholder="Username" name="psw" >
@@ -35,10 +39,11 @@
                     </div>
                 </form>
             </li>
+            {% endif %}
         </ul>
     </div>
-</nav> 
-        <table class="table" id="table"
+</nav>
+      <table class="table" id="table"
             data-filter-control="true">
             <thead>
                 <tr>
