--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -39,18 +39,13 @@
                         </div>
                     </form>
                 </li>
-                {% endif %}
             </ul>
         </div>
     </nav>
 
     <!--Add a dealer table here -->
-    <div class="container-fluid">
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-warning" role="alert">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
+    <div class="container-flui
+     <div class="alert alert-warning" role="alert">{{ message }}</div>
       <table class="table" id="table"
             data-filter-control="true">
             <thead>
@@ -72,7 +67,6 @@
                         <td></td>
                         <td></td>
                     </tr>
-                    {% endfor %}
                 </tbody>
            </table>
            </div>
