--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -22,15 +22,12 @@
                   <a class="navbar-brand" href="{% url 'djangoapp:about' %}">Dealership Review</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
                 <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    <a class="btn btn-link" href="#"></a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:logout' %}"></a>
                 </li>
-                {% else %}
                 <li>
                     <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                        {% csrf_token %}
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Username" name="username" >
                             <input type="password" class="form-control" placeholder="Username" name="psw" >
