--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -42,7 +42,7 @@
 
     <!--Add a dealer table here -->
     <div class="container-flui
-     <div class="alert alert-warning" role="alert">{{ message }}</div>
+     <div class="alert alert-warning" role="alert"></div>
       <table class="table" id="table"
             data-filter-control="true">
             <thead>
@@ -52,6 +52,7 @@
                     <th data-field="city">City</th>
                     <th data-field="address">Address</th>
                     <th data-field="zip">Zip</th>
+                    <th <option value ='option'>select state</option>></th>
                     <th data-field="state" data-filter-control="select">State</th>
                 </tr>
             </thead>
